--- a/app/src/main/res/layout/activesettings.xml
+++ b/app/src/main/res/layout/activesettings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,8 +9,10 @@
         android:id="@+id/textView2"
         android:layout_width="398dp"
         android:layout_height="126dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="8dp"
         android:text="НАХОДИТСЯ В РАЗРАБОТКЕ"
         android:textSize="34sp"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="150dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
