--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ОКО"
+        android:text="@string/OKO"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,18 +39,18 @@
         android:layout_height="67dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:text="@string/Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/Camera"
         android:layout_width="87dp"
         android:layout_height="67dp"
         android:layout_marginStart="47dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="16dp"
-        android:text="Button"
+        android:text="@string/camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/account"
         app:layout_constraintStart_toEndOf="@+id/button" />
@@ -61,7 +61,7 @@
         android:layout_height="67dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="16dp"
-        android:text="ID"
+        android:text="@string/id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
