--- a/app/src/main/res/layout/activesettings.xml
+++ b/app/src/main/res/layout/activesettings.xml
@@ -4,14 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="398dp"
-        android:layout_height="126dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/inProgress"
-        android:textSize="34sp"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ClearAcc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="420dp"
+        android:layout_marginEnd="119dp"
+        android:layout_marginBottom="263dp"
+        android:text="@string/clearAcc"
+        app:backgroundTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
