--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.119" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/settings"
         android:layout_width="87dp"
         android:layout_height="67dp"
         android:layout_marginStart="28dp"
@@ -53,7 +53,7 @@
         android:text="@string/camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/account"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/settings" />
 
     <Button
         android:id="@+id/account"
