--- a/app/src/main/res/layout/activesettings.xml
+++ b/app/src/main/res/layout/activesettings.xml
@@ -8,18 +8,17 @@
         android:id="@+id/clearAcc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="118dp"
-        android:layout_marginTop="420dp"
-        android:layout_marginEnd="119dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="118dp"
         android:layout_marginBottom="263dp"
         android:text="@string/clearAcc"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/ChangeName" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ChangeName"
@@ -33,8 +32,10 @@
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/clearAcc"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/username"
