--- a/app/src/main/res/layout/activesettings.xml
+++ b/app/src/main/res/layout/activesettings.xml
@@ -10,13 +10,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="118dp"
+        android:layout_marginEnd="120dp"
         android:layout_marginBottom="263dp"
         android:text="@string/clearAcc"
+        android:textColor="#FDFBFB"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ChangeName" />
 
@@ -24,11 +25,12 @@
         android:id="@+id/ChangeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="340dp"
-        android:layout_marginEnd="121dp"
+        android:layout_marginEnd="120dp"
         android:layout_marginBottom="32dp"
         android:text="@string/change_name"
+        android:textColor="#FFFFFF"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/clearAcc"
         app:layout_constraintEnd_toEndOf="parent"
