--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <view
-        android:id="@+id/view1"
-        class="android.widget.LinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:layout_marginBottom="495dp"
-        android:background="#009688"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/OKO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
         android:id="@+id/textView"
@@ -35,21 +32,24 @@
 
     <Button
         android:id="@+id/settings"
-        android:layout_width="87dp"
-        android:layout_height="67dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="16dp"
         android:text="@string/Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/Camera"
-        android:layout_width="87dp"
-        android:layout_height="67dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="47dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="16dp"
+        android:contentDescription="@string/camera"
+        android:scaleType="centerCrop"
+        android:src="@drawable/camera_ico"
         android:text="@string/camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/account"
@@ -57,8 +57,8 @@
 
     <Button
         android:id="@+id/account"
-        android:layout_width="87dp"
-        android:layout_height="67dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="16dp"
         android:text="@string/id"
