--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/OKO"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -30,12 +19,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.119" />
 
-    <Button
+    <ImageButton
         android:id="@+id/settings"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/Settings"
+        android:scaleType="centerCrop"
+        android:src="@drawable/settings"
         android:text="@string/Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -47,8 +40,9 @@
         android:layout_marginStart="47dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/camera"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:src="@drawable/camera_ico"
         android:text="@string/camera"
         app:layout_constraintBottom_toBottomOf="parent"
