--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/gifImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/OKO"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,13 +48,17 @@
         app:layout_constraintEnd_toStartOf="@+id/account"
         app:layout_constraintStart_toEndOf="@+id/settings" />
 
-    <Button
+    <ImageButton
         android:id="@+id/account"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="16dp"
+        android:contentDescription="@string/id"
         android:text="@string/id"
+        android:src="@drawable/id_ico"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
