--- a/app/src/main/res/layout/activesettings.xml
+++ b/app/src/main/res/layout/activesettings.xml
@@ -7,15 +7,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/clearAcc"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="120dp"
         android:layout_marginBottom="263dp"
         android:text="@string/clearAcc"
         android:textColor="#FDFBFB"
         app:backgroundTint="@color/black"
+        app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,15 +23,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/ChangeName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="340dp"
-        android:layout_marginEnd="120dp"
         android:layout_marginBottom="32dp"
         android:text="@string/change_name"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/black"
+        app:cornerRadius="5dp"
         app:layout_constraintBottom_toTopOf="@+id/clearAcc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -42,13 +40,12 @@
 
     <TextView
         android:id="@+id/username"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="75dp"
         android:layout_marginBottom="157dp"
         android:text="@string/Authorisation"
-        android:textColor="#9C27B0"
+        android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="41sp"
         app:layout_constraintBottom_toTopOf="@+id/ChangeName"
         app:layout_constraintEnd_toEndOf="parent"
